--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,41 @@
       });
     });
   </script>
+
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-messaging.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+
+  <script src="https://js.stripe.com/v3/"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
+
+
+  <script>
+   // Import the functions you need from the SDKs you need
+  import { initializeApp } from "firebase/app";
+  import { getAnalytics } from "firebase/analytics";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+  apiKey: "AIzaSyCt8y3WKuW7ixEVI7LZQoc3KG29Q12Xabc",
+  authDomain: "renjuki.firebaseapp.com",
+  projectId: "renjuki",
+  storageBucket: "renjuki.appspot.com",
+  messagingSenderId: "809331067449",
+  appId: "1:809331067449:web:4925aea344ed1cbe579be8",
+  measurementId: "G-2KZSHY58GT"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  </script>
+
 </body>
 </html>
